test: increase coverage to pass SonarQube quality check
Add comprehensive test coverage for device-viewer service:
- DeviceViewerService: 7 tests covering all service methods
- DeviceViewController: 6 tests covering all endpoints
- DeviceDTO: parametrized tests for all device types

Fix code smell: replace Collectors.toList() with toList()